--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: 10em;
+    padding: 10em;
     box-sizing: border-box;
   }
   body {
@@ -10,6 +10,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 3em;
+    padding: 15em;
   }
   
