--- a/style.css
+++ b/style.css
@@ -5,12 +5,16 @@
   }
   body {
     background: white;
-    margin: 5cm;
+    margin: 0;
     font-family: sans-serif;
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 15em;
+  }
+  hr {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
   }
   
